Code Refactor `ruff check --fix --extend-select I` (#33)

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -6,9 +6,9 @@ name: Ultralytics Actions
 
 on:
   push:
-    branches: [main,master]
+    branches: [main]
   pull_request_target:
-    branches: [main,master]
+    branches: [main]
 
 jobs:
   format:
